--- a/uk.ac.gda.client/plugin.xml
+++ b/uk.ac.gda.client/plugin.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.2"?>
 <plugin>
    <extension-point id="uk.ac.gda.client.dashboard.objects" name="Default dashboard objects" schema="schema/uk.ac.gda.client.dashboard.objects.exsd"/>
@@ -913,6 +913,15 @@
              mode="FORCE_TEXT"
              style="push"
              tooltip="Stops all GDA devices, including motors and detectors. Also aborts scans and scripts and kills threads. Warning this might leave GDA in an inconsistent state.">
+          <visibleWhen
+                checkEnabled="false">
+             <not>
+                <systemTest
+                      property="uk.ac.gda.client.local_stop_all"
+                      value="true">
+                </systemTest>
+             </not>
+          </visibleWhen>
        </command>
     </toolbar>
  </menuContribution>
