--- a/.travis.yml
+++ b/.travis.yml
@@ -40,15 +40,13 @@ git:
     submodules: false
 
 before_script:
-  # Stat xvfb, this allows SWTBot to execute in tests.
+  # Start Xvfb, this allows SWTBot to execute in tests.
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
 
 before_install:
   - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
-  - chmod +x ./org.eclipse.scanning.releng/build/commit-msg.sh
-  - bash ./org.eclipse.scanning.releng/build/commit-msg.sh
 
 # Clone the extra repos.
   - git clone --depth=50 --branch=master https://github.com/eclipse/richbeans.git ../../eclipse/org.eclipse.richbeans
